syntax = "proto3";

package notificationproto;
import "google/protobuf/empty.proto";

service NotificationProtoService {
	rpc SendEmail(NotificationEmailRequest) returns (google.protobuf.Empty) {}
	rpc SendSms(NotificationSmsRequest) returns (google.protobuf.Empty) {}
}

message NotificationEmailRequest {
	string recipient = 1;
	string subject = 2;
	string message = 3;
}

message NotificationSmsRequest {
	string recipient = 1;
	string message = 2;
}